--- a/src/index.less
+++ b/src/index.less
@@ -4,4 +4,17 @@
     padding-right: 22px !important;
     //background-color: #108ee9 !important;
   }
+  .ac-hand-tooltip {
+    position: absolute;
+    z-index: 10;
+    background-color: #FFF;
+    //border-radius: 3px;
+    //box-shadow: 0px 2px 4px #888;
+    box-shadow: 0px 0px 4px #888;
+    font-size: 10px;
+    z-index: 10;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
 }
+
