--- a/src/index.less
+++ b/src/index.less
@@ -5,14 +5,13 @@
     //background-color: #108ee9 !important;
   }
   .ac-hand-tooltip {
-    position: absolute;
-    z-index: 10;
+    position: fixed;
     background-color: #FFF;
     //border-radius: 3px;
     //box-shadow: 0px 2px 4px #888;
     box-shadow: 0px 0px 4px #888;
-    font-size: 10px;
-    z-index: 10;
+    //font-size: 10px;
+    z-index: 100;
     padding-left: 5px;
     padding-right: 5px;
   }
