--- a/src/index.less
+++ b/src/index.less
@@ -15,5 +15,15 @@
     padding-left: 5px;
     padding-right: 5px;
   }
+
+  // 三道杠
+  .three-bar {
+    float: right;
+    font-size: 10px;
+    cursor: default;
+    width: 16px;
+    text-align: center;
+  }
+
 }
 
