--- a/demo/demolist/index.less
+++ b/demo/demolist/index.less
@@ -3,14 +3,10 @@
   display: none;
 }
 
-//.tinper-time {
-//  //display: none;
-//  background-color: red;
-//  //.u-time-picker-input {
-//  //  display: none;
-//  //}
-//}
-
 .u-time-picker-input {
   display: none;
+}
+
+.is-readOnly{
+  background-color: #7ed321 !important;
 }
