--- a/demo/demolist/index.less
+++ b/demo/demolist/index.less
@@ -7,7 +7,21 @@
   display: none;
 }
 
-.is-readOnly{
+.is-readOnly {
   background-color: #DFE1E6 !important;
 }
 
+.headClass {
+  background-color: #108ee9 !important;
+}
+
+#example5 {
+  .ht_clone_top {
+    tr:first-child {
+      th:nth-child(6) { //匹配第一个元素
+        background-color: #108ee9 !important;
+      }
+    }
+  }
+
+}
