--- a/demo/demolist/index.less
+++ b/demo/demolist/index.less
@@ -18,10 +18,9 @@
 #example5 {
   .ht_clone_top {
     tr:first-child {
-      th:nth-child(6) { //匹配第一个元素
+      th:nth-child(6) { //匹配第几个元素
         background-color: #108ee9 !important;
       }
     }
   }
-
 }
