--- a/src/index.less
+++ b/src/index.less
@@ -28,7 +28,7 @@
 
   .hand-table-drop-down-menu{
     .ht_clone_top {
-      tr:first-child {
+      tr:last-child {
         th:nth-child(2) { //匹配第几个元素
           .changeType{
             display: none;
