--- a/demo/demolist/index.less
+++ b/demo/demolist/index.less
@@ -29,3 +29,15 @@
   }
 }
 
+.xxxx{
+  display: flex;
+  justify-content: flex-start;
+}
+
+//.columnsGantta {
+//  //margin-left: 551px;
+//  //margin-top: -180px;
+//  overflow: scroll;
+//
+//}
+
