--- a/demo/demolist/index.less
+++ b/demo/demolist/index.less
@@ -29,15 +29,8 @@
   }
 }
 
-.xxxx{
+.gantta-content{
   display: flex;
   justify-content: flex-start;
 }
-
-//.columnsGantta {
-//  //margin-left: 551px;
-//  //margin-top: -180px;
-//  overflow: scroll;
-//
-//}
 
